# radifox-convert

./: .gitattributes  Dockerfile  README.md  pyproject.toml  setup.py
radifox/convert/: __init__.py  _version.py  anondb.py  base.py  cli.py  deanon.py  dicom.py  exec.py  lut.py  parrec.py  parrec_writer.py  utils.py
tests/: test_import.py
