[build-system]
requires = ["setuptools>=61.0", 'tomli;python_version<"3.11"']
build-backend = "setuptools.build_meta"

[project]
name = "radifox-convert"
dynamic = ["version"]
description = "Conversion tools for RADIFOX, including DICOM and PARREC to NIfTI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "JH-MIPC", email = "jhmipc@jh.edu"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
    "nibabel",
    "numpy",
    "radifox @ git+https://github.com/jh-mipc/radifox.git@6d78467",
    "pydicom",
]

[project.urls]
Homepage = "https://github.com/jh-mipc/radifox-convert"

[project.scripts]
radifox-convert = "radifox.convert.cli:convert"
radifox-update = "radifox.convert.cli:update"

[tool.setuptools.packages.find]
include = ["radifox.*"]

[tool.setuptools.package-data]
"radifox.convert" = ["parrec_templates/*.txt"]

[miniver]
package_path = "radifox/convert"
